--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
 	"name": "cordain-web",
 	"description": "Cordain's Main Website",
-	"version": "0.0.0",
+	"version": "0.0.1",
 	"homepage": "http://www.cordain.com/",
-	"keywords": [
-		"cordain"
-	],
+	"keywords": ["cordain"],
+	"private": true,
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/mohitkhanna/cordain-web.git"
@@ -18,34 +17,37 @@
 		"email": "mohitk@icloud.com",
 		"url": "http://www.cordain.com/"
 	},
-	"contributors": [
-		{
-			"name": "Bapatla Veera Srinivasa",
-			"email": "srinivasa.bv@gmail.com",
-			"url": "http://www.cordain.com/"
-		}
-	],
-	"licenses": [
-		{
-			"type": "CIT",
-			"url": "http://www.cordain.com/assets/LICENSE.txt"
-		}
-	],
+	"contributors": [{
+		"name": "Bapatla Veera Srinivasa",
+		"email": "srinivasa.bv@gmail.com",
+		"url": "http://www.cordain.com/"
+	}],
+	"licenses": [{
+		"type": "CIT",
+		"url": "http://www.cordain.com/assets/LICENSE.txt"
+	}],
 	"main": "src/index.js",
 	"engines": {
 		"node": ">= 0.10.29"
 	},
+	"scripts": {
+		"start": "node ./bin/www",
+		"dist": "node dist;"
+	},
 	"dependencies": {
 		"async": ">= 0.2.5",
-		"express": "~4.6.1"
+		"express": "~4.6.1",
+		"static-favicon": "~1.0.0",
+		"morgan": "~1.0.0",
+		"cookie-parser": "~1.0.1",
+		"body-parser": "~1.0.0",
+		"debug": "~0.7.4",
+		"jade": "~1.3.0",
+		"mongodb": "*"
 	},
 	"devDependencies": {
 		"expect.js": ">= 0.3.1",
 		"mocha": "*",
 		"should": "^4.0.4"
-	},
-	"private": true,
-	"scripts": {
-		"dist": "node dist;"
 	}
 }
