--- a/package.json
+++ b/package.json
@@ -28,26 +28,27 @@
 	}],
 	"main": "src/index.js",
 	"engines": {
-		"node": ">= 0.10.29"
+		"node": "0.10.x"
 	},
 	"scripts": {
-		"start": "node ./bin/www",
+		"start": "nodemon bin/www",
+		"test": "DEBUG=cordain-web nodemon bin/www",
 		"dist": "node dist;"
 	},
 	"dependencies": {
-		"async": ">= 0.2.5",
-		"express": "~4.6.1",
-		"static-favicon": "~1.0.0",
-		"morgan": "~1.0.0",
-		"cookie-parser": "~1.0.1",
-		"body-parser": "~1.0.0",
-		"debug": "~0.7.4",
-		"jade": "~1.3.0",
-		"mongodb": "*"
+		"async": "0.2.x",
+		"express": "4.7.x",
+		"serve-favicon": "2.0.x",
+		"morgan": "1.2.x",
+		"cookie-parser": "1.3.x",
+		"body-parser": "1.5.x",
+		"debug": "1.0.x",
+		"jade": "1.5.x",
+		"mongodb": "1.4.x"
 	},
 	"devDependencies": {
-		"expect.js": ">= 0.3.1",
-		"mocha": "*",
-		"should": "^4.0.4"
+		"expect.js": "0.3.x",
+		"mocha": "1.21.x",
+		"should": "3.3.x"
 	}
 }
