--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ assets/public/css/bootstrap.min.css
 assets/public/css/bootstrap.min.css.map
 assets/public/css/global.css
 assets/public/css/global.css.map
+assets/public/scss/.sass-cache
