--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
 	"description": "Cordain's Main Website",
 	"version": "0.0.1",
 	"homepage": "http://www.cordain.com/",
-	"keywords": ["cordain"],
+	"keywords": [
+		"cordain"
+	],
 	"private": true,
 	"repository": {
 		"type": "git",
@@ -17,15 +19,19 @@
 		"email": "mohitk@icloud.com",
 		"url": "http://www.cordain.com/"
 	},
-	"contributors": [{
-		"name": "Bapatla Veera Srinivasa",
-		"email": "srinivasa.bv@gmail.com",
-		"url": "http://www.cordain.com/"
-	}],
-	"licenses": [{
-		"type": "CIT",
-		"url": "http://www.cordain.com/assets/LICENSE.txt"
-	}],
+	"contributors": [
+		{
+			"name": "Bapatla Veera Srinivasa",
+			"email": "srinivasa.bv@gmail.com",
+			"url": "http://www.cordain.com/"
+		}
+	],
+	"licenses": [
+		{
+			"type": "CIT",
+			"url": "http://www.cordain.com/assets/LICENSE.txt"
+		}
+	],
 	"main": "src/index.js",
 	"engines": {
 		"node": "0.10.x"
@@ -37,16 +43,17 @@
 	},
 	"dependencies": {
 		"async": "0.2.x",
-		"express": "4.7.x",
-		"serve-favicon": "2.0.x",
-		"morgan": "1.2.x",
-		"cookie-parser": "1.3.x",
 		"body-parser": "1.5.x",
+		"compression": "1.x.x",
+		"cookie-parser": "1.3.x",
 		"debug": "1.0.x",
+		"express": "4.7.x",
 		"jade": "1.5.x",
+		"moment": "2.x.x",
 		"mongodb": "1.4.x",
-		"winston": "0.7.x",
-		"moment": "2.x.x"
+		"morgan": "1.2.x",
+		"serve-favicon": "2.0.x",
+		"winston": "0.7.x"
 	},
 	"devDependencies": {
 		"expect.js": "0.3.x",
