--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
 		"body-parser": "1.5.x",
 		"compression": "1.x.x",
 		"cookie-parser": "1.3.x",
-		"debug": "1.0.x",
+		"debug": "2.6.9",
 		"express": "4.7.x",
 		"jade": "1.5.x",
-		"moment": "2.x.x",
+		"moment": "2.19.3",
 		"mongodb": "1.4.x",
 		"morgan": "1.2.x",
 		"serve-favicon": "2.0.x",
